updated project version 2

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,11 +53,20 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias 'key'
+            keyPassword 'Justnoted2024'
+            storeFile file('/Users/msa/flutter projects/just-noted-flutter-main/key.jks')
+            storePassword 'Justnoted2024'
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
